--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: #333;
-  font-size: 16px;
+  font-size: 1em;
 }
 
 html, body,nav, a, ul, li, img{
@@ -19,4 +19,23 @@ a {
 }
 * {
   box-sizing: border-box;
+}
+
+h1{
+  font-family: 'Great Vibes', cursive;
+  font-weight: 300;
+  font-size: 3em;
+}
+h2{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 1.5em;
+
+}
+
+p {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: .95em;
+  line-height: 1.5em;
 }
